# Project-academy

install/: local_setup.sh  setup.sh
install/interfaces/include/interfaces/interfaces/msg/: comando.hpp
install/interfaces/include/interfaces/interfaces/msg/detail/: comando__builder.hpp  comando__functions.c  comando__functions.h  comando__rosidl_typesupport_fastrtps_c.h  comando__rosidl_typesupport_introspection_c.h  comando__type_support.c  comando__type_support.h
install/interfaces/local/lib/python3.10/dist-packages/interfaces/: _interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
install/interfaces/local/lib/python3.10/dist-packages/interfaces/msg/: _comando.py
install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
install/interfaces/share/interfaces/: package.sh
install/my_simulator/lib/my_simulator/: CommandPublisher  my_simulator  talker
install/my_simulator/share/ament_index/resource_index/package_run_dependencies/: my_simulator
install/my_simulator/share/ament_index/resource_index/parent_prefix_path/: my_simulator
install/my_simulator/share/my_simulator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_simulator/share/my_simulator/launch/: my_simulator_launch.py
install/my_simulator_interfaces/include/my_simulator_interfaces/my_simulator_interfaces/msg/: rosidl_generator_c__visibility_control.h
install/my_simulator_interfaces/include/my_simulator_interfaces/my_simulator_interfaces/msg/detail/: comando__builder.hpp  comando__functions.c  comando__functions.h  comando__rosidl_typesupport_fastrtps_c.h  comando__rosidl_typesupport_introspection_c.h  comando__rosidl_typesupport_introspection_cpp.hpp  comando__struct.h  comando__struct.hpp  comando__traits.hpp  comando__type_support.c  comando__type_support.cpp  comando__type_support.hpp
install/my_simulator_interfaces/local/lib/python3.10/dist-packages/my_simulator_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
install/my_simulator_interfaces/local/lib/python3.10/dist-packages/my_simulator_interfaces/msg/: __init__.py  _comando.py  _comando_s.c
install/my_simulator_interfaces/share/my_simulator_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_simulator_interfaces/share/my_simulator_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_my_simulator_interfaces__rosidl_generator_cExport.cmake  export_my_simulator_interfaces__rosidl_generator_cppExport.cmake  export_my_simulator_interfaces__rosidl_generator_pyExport.cmake  export_my_simulator_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_simulator_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  my_simulator_interfaces__rosidl_typesupport_cExport-noconfig.cmake  my_simulator_interfaces__rosidl_typesupport_cExport.cmake  my_simulator_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  my_simulator_interfaces__rosidl_typesupport_cppExport.cmake  my_simulator_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_simulator_interfaces__rosidl_typesupport_introspection_cExport.cmake  my_simulator_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  my_simulator_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/my_simulator_interfaces/share/my_simulator_interfaces/msg/: Comando.idl
log/: latest_build
src/interfaces/: CMakeLists.txt
src/my_simulator/: CMakeLists.txt
src/my_simulator/data/: circuit.csv
src/my_simulator/include/: my_simulator.hpp
src/my_simulator/src/: CommandPublisher.cpp  generarCircuito.py  main.cpp  my_simulator.cpp
src/my_simulator_interfaces/: CMakeLists.txt
src/my_simulator_interfaces/msg/: Comando.msg
